features and bug fix
- Drives management
- TextEditView header invisible
- Unsave tips twice

--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -156,7 +156,8 @@
     }
   }
 
-  input.value {
+  input.value,
+  select.value {
     border: solid 1px rgba(0, 0, 0, 0.1);
     font-size: 16px;
     outline: none;
